<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="fbLoginBtnText">Sign in with Facebook</string>
    <string name="googleLoginText">Sign in with Google</string>
    <string name="emailLoginText">Sign in with Email and Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register">Register</string>
    <string name="register_text">Register with Email and Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_drawer">LOGOUT</string>
    <string name="setting_drawer">SETTINGS</string>
    <string name="yourLunch_drawer">YOUR LUNCH</string>
    <string name="not_yet"> has not decided yet</string>
    <string name="already_did"> is eating</string>
    <string name="i_am_here">I am here</string>
    <string name="create_account">Create Account</string>
    <string name="upload_your_image">Upload Your Image</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="i_m_already_a_member">I am already a member.</string>
    <string name="i_am_a_new_user">I am a New user.</string>
    <string name="profile">Profile</string>
    <string name="sign_in_using_email_and_password">Sign In using Email and Password</string>
    <string name="sign_up_using_email_and_password">Sign Up using Email and Password</string>
    <string name="best_way_to_invest_your_money">Best way to invest Your Money!</string>
    <string name="btn_call">CALL</string>
    <string name="btn_like">LIKE</string>
    <string name="btn_web">WEBSITE</string>

    <!-- Dialog -->
    <string name="custom_dialog">Activer/Désactiver les notifications</string>
    <string name="custom_dialog_delete">Supprimer votre compte</string>
    <string name="delete_account">Delete</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Open">open</string>
    <string name="Close">close</string>

    <string name="facebook_app_id">973608296696991</string>
    <string name="fb_login_protocol_scheme">fb973608296696991</string>


</resources>