<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RestaurantDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controllers.activities.RestaurantActivity">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="170dp"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:src="@drawable/ic_baseline_check_circle_red_24"
            app:fabSize="auto"
            tools:ignore="SpeakableTextPresentCheck" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="200dp"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/resto_name"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:textStyle="bold|italic"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:text="" />

            <androidx.appcompat.widget.AppCompatRatingBar

                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="230dp"
                android:layout_marginTop="7dp"
                android:numStars="3"
                android:text=""
                android:theme="@style/RatingBar" />

            <TextView
                android:id="@+id/resto_address"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:textStyle="bold|italic"
                android:layout_marginStart="5dp"
                android:layout_marginTop="27dp"
                android:text="" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/action_btn"
            android:layout_marginTop="270dp"
            android:layout_width="match_parent"
            android:layout_height="70dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/call_btn"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:drawableTop="@drawable/ic_baseline_local_phone_24"
                android:text="@string/btn_call"
                android:textColor="#E01F0C"
                android:textAlignment="center"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/star_btn"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_baseline_star_red_24"
                android:text="@string/btn_like"
                android:textColor="#E01F0C"
                android:textAlignment="center"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/web_btn"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="30dp"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/ic_baseline_public_red_24"
                android:text="@string/btn_web"
                android:textColor="#E01F0C"
                android:textAlignment="center"
                android:textStyle="bold"
                tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurant_likeList_recyclerView"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/action_btn"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

</RelativeLayout>